force-app/main/default/objects/AmsAdministration__c/AmsAdministration__c.object-meta.xml
<CustomObject>
    <description>Oggetto per tracciare le elaborazione eseguite dall&apos;app di Amministrazione AMS</description>
    <label>Amministrazione AMS</label>
    <nameField>
        <displayFormat>AMS-{000000}</displayFormat>
        <label>Amministrazione AMS Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Amministrazioni AMS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>