force-app/main/default/objects/AmsAdministration__c/fields/CreatedRecords__c.field-meta.xml
<CustomField>
    <fullName>CreatedRecords__c</fullName>
    <label>Record Creati</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>