force-app/main/default/objects/AmsAdministration__c/fields/DeletedRecords__c.field-meta.xml
<CustomField>
    <fullName>DeletedRecords__c</fullName>
    <label>Record Eliminati</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>