force-app/main/default/objects/AmsAdministration__c/fields/FailedRecords__c.field-meta.xml
<CustomField>
    <fullName>FailedRecords__c</fullName>
    <label>Record In Errore</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>