force-app/main/default/objects/AmsAdministration__c/fields/GrandTotal__c.field-meta.xml
<CustomField>
    <fullName>GrandTotal__c</fullName>
    <formula>ProcessedRecords__c +  FailedRecords__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Totale Record</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>