force-app/main/default/objects/AmsAdministration__c/fields/UpdatedRecords__c.field-meta.xml
<CustomField>
    <fullName>UpdatedRecords__c</fullName>
    <label>Record Aggiornati</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>